--- a/manifest.json
+++ b/manifest.json
@@ -1161,7 +1161,9 @@
 					"fonts/wafuli-iconfont.ttf",
 					"fonts/wafuli-iconfont.svg",
 					"images/share-guide-top.png",
-					"images/share-guide-bottom.png"
+					"images/share-guide-bottom.png",
+					"images/support-up.png",
+					"images/support-down.png"
 				],
 				"refer": [
 					"a_login.html",
