--- a/manifest.json
+++ b/manifest.json
@@ -272,7 +272,8 @@
 					"html/m_hongbao.html",
 					"account/m_account_settings.html",
 					"account/m_account_change_bankcard.html",
-					"account/m_account_charge.html"
+					"account/m_account_charge.html",
+					"html/m_open_envelope.html"
 				],
 				"priority": 0
 			},
@@ -313,7 +314,9 @@
 					"images/slider1.jpg",
 					"images/slider3.jpg",
 					"images/slider2.jpg",
-					"js/UserInfo.js"
+					"js/UserInfo.js",
+					"images/klb-04.png",
+					"html/m_activity_Christmas.html"
 				],
 				"refer": [
 					"m_detail_hongbao.html",
@@ -352,7 +355,10 @@
 					"account/m_account_change_bankcard.html",
 					"html/m_add_finance.html",
 					"account/m_account_vip.html",
-					"account/m_vip_intro.html"
+					"account/m_vip_intro.html",
+					"html/m_open_envelope.html",
+					"m_index.html",
+					"html/m_kenglaoban.html"
 				],
 				"priority": 0
 			},
@@ -803,7 +809,8 @@
 					"fonts/wafuli-iconfont.svg",
 					"images/share-guide-top.png",
 					"images/share-guide-bottom.png",
-					"js/mui.js"
+					"js/mui.js",
+					"html/m_open_envelope.html"
 				],
 				"refer": [
 					"account/m_account_withdraw.html"
@@ -1027,7 +1034,9 @@
 					"images/share-guide-top.png",
 					"images/share-guide-bottom.png",
 					"js/mui.js",
-					"images/share_logo.jpg"
+					"images/share_logo.jpg",
+					"html/m_activity_Christmas.html",
+					"html/m_kenglaoban.html"
 				],
 				"refer": [],
 				"priority": 0
@@ -1106,7 +1115,9 @@
 					"fonts/wafuli-iconfont.svg",
 					"images/share-guide-top.png",
 					"images/share-guide-bottom.png",
-					"images/bg-no.png"
+					"images/bg-no.png",
+					"html/m_activity_Christmas.html",
+					"html/m_kenglaoban.html"
 				],
 				"refer": [
 					"a_login.html",
@@ -1139,7 +1150,8 @@
 					"fonts/wafuli-iconfont.ttf",
 					"fonts/wafuli-iconfont.svg",
 					"images/share-guide-top.png",
-					"images/share-guide-bottom.png"
+					"images/share-guide-bottom.png",
+					"html/m_kenglaoban.html"
 				],
 				"refer": [
 					"html/m_activity_recommend.html",
@@ -1460,7 +1472,8 @@
 					"images/share-guide-top.png",
 					"images/share-guide-bottom.png",
 					"js/share.js",
-					"images/share_logo.jpg"
+					"images/share_logo.jpg",
+					"html/m_activity_Christmas.html"
 				],
 				"refer": [
 					"a_login.html",
@@ -1484,7 +1497,8 @@
 					"images/share-guide-top.png",
 					"images/share-guide-bottom.png",
 					"js/mui.min.js",
-					"html/m_activity_recommend.html"
+					"html/m_activity_recommend.html",
+					"html/m_activity_Christmas.html"
 				],
 				"refer": [],
 				"priority": 0
@@ -1784,6 +1798,65 @@
 				],
 				"refer": [],
 				"priority": 0
+			},
+			"html/m_open_envelope.html": {
+				"resources": [
+					"css/m_open_envelope.css",
+					"fonts/huakangshaonv.ttf",
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"css/m_common.css",
+					"images/fubi.png",
+					"js/UserInfo.js",
+					"images/hb-manage.png",
+					"images/hb-manage-open.png",
+					"fonts/huakangshaonv.woff",
+					"account/m_account_charge.html"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/m_activity_Christmas.html": {
+				"resources": [
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/m_activity_Christmas.css",
+					"css/mui.min.css",
+					"css/m_common.css",
+					"images/act-bg-bottom.png",
+					"images/act-bg-txt.png",
+					"images/act-bg-top.png",
+					"images/act-center-01.png",
+					"js/fullPage.min.js",
+					"images/act-center-03.png",
+					"images/act-center-04.png",
+					"images/act-center-05.png",
+					"images/act-center-06.png",
+					"images/act-center-02.png",
+					"images/act-task-bg-all.png",
+					"html/m_open_envelope.html"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/m_kenglaoban.html": {
+				"resources": [
+					"images/klb-03.png",
+					"images/klb-02.png",
+					"js/mui.min.js",
+					"images/klb-06.png",
+					"images/klb-05.png",
+					"images/klb-01.png",
+					"css/mui.min.css",
+					"css/m_kenglaoban.css",
+					"css/m_common.css",
+					"fonts/mui.ttf",
+					"images/klb-04.png",
+					"html/m_activity_Christmas.html"
+				],
+				"refer": [],
+				"priority": 0
 			}
 		},
 		"idle": {
@@ -1836,7 +1909,6 @@
 				"images/sin-picon.png",
 				"images/understand-wfl-bg.png",
 				"images/flow-back.png",
-				"fonts/huakangshaonv.ttf",
 				"images/picture_104.png",
 				"images/left-icon3.png",
 				"images/nav-4.png",
@@ -2023,7 +2095,6 @@
 				"images/numberg2.png",
 				"images/numberg1.png",
 				"fonts/Helvetica.Ttf",
-				"css/m_activity_Christmas.css",
 				"fonts/fangzheng.ttf",
 				"images/newico3.png",
 				"images/new5.png",
@@ -2268,7 +2339,6 @@
 	  "images/首页.jpg",
 	  "css/m_aboutus.css",
 	  "css/m_account_message.css",
-	  "css/m_activity_Christmas.css",
 	  "css/m_common_text.css",
 	  "css/m_expsubmit.css",
 	  "css/m_user_guide.css",
